// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderTemplate > renders request-accepted 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #16a34a; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>Your Appointment is Confirmed</h1>
  <p>Great news! Your appointment request has been accepted:</p>
  <ul>
    <li><strong>Business:</strong> Acme Salon</li>
    <li><strong>Service:</strong> Haircut</li>
    <li><strong>Confirmed time:</strong> Friday, March 7 at 2:30 PM</li>
  </ul>
  <p>We look forward to seeing you.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders request-cancelled 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #d97706; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>Appointment Request Cancelled</h1>
  <p>A customer has cancelled their appointment request:</p>
  <ul>
    <li><strong>Customer:</strong> Carol</li>
    <li><strong>Service:</strong> Facial</li>
    <li><strong>Proposed time:</strong> Monday, March 10 at 9:00 AM</li>
  </ul>
  <p>The time slot is now available for other bookings.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders request-declined with rebook copy 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #dc2626; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>Appointment Request Declined</h1>
  <p>Unfortunately, your appointment request was declined:</p>
  <ul>
    <li><strong>Business:</strong> Acme Salon</li>
    <li><strong>Service:</strong> Haircut</li>
  </ul>
  <p>You may rebook or join the waitlist for this service through the Qulene app.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders request-received with all fields including notes 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #4f46e5; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>New Appointment Request</h1>
  <p>You have received a new appointment request:</p>
  <ul>
    <li><strong>Customer:</strong> Alice</li>
    <li><strong>Service:</strong> Haircut</li>
    <li><strong>Proposed time:</strong> Friday, March 7 at 2:30 PM</li>
    <li><strong>Notes:</strong> Please use scissors only</li>
  </ul>
  <p>Log in to your Qulene dashboard to accept or decline this request.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders request-received without notes — notes block absent 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #4f46e5; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>New Appointment Request</h1>
  <p>You have received a new appointment request:</p>
  <ul>
    <li><strong>Customer:</strong> Bob</li>
    <li><strong>Service:</strong> Massage</li>
    <li><strong>Proposed time:</strong> Saturday, March 8 at 10:00 AM</li>
    
  </ul>
  <p>Log in to your Qulene dashboard to accept or decline this request.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders service-removed with apology copy 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #6b7280; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>Service No Longer Available</h1>
  <p>We regret to inform you that a service you had a booking for is no longer available:</p>
  <ul>
    <li><strong>Business:</strong> Acme Salon</li>
    <li><strong>Service:</strong> Deep Tissue Massage</li>
  </ul>
  <p>We apologise for the inconvenience. Please visit the Qulene app to explore other available services.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;

exports[`renderTemplate > renders waitlist-promoted with booking CTA 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="UTF-8">
  <style>
    body { font-family: sans-serif; color: #1f2937; max-width: 600px; margin: 0 auto; padding: 24px; }
    h1 { font-size: 20px; color: #4f46e5; }
    ul { line-height: 1.8; }
    p { line-height: 1.6; }
    .footer { margin-top: 32px; font-size: 12px; color: #6b7280; }
  </style>
</head>
<body>
  <h1>A Slot Has Opened for You</h1>
  <p>Good news! A slot has become available for a service you are waitlisted for:</p>
  <ul>
    <li><strong>Business:</strong> Acme Salon</li>
    <li><strong>Service:</strong> Haircut</li>
  </ul>
  <p>Open the Qulene app to book your appointment before the slot is taken.</p>
  <p class="footer">Qulene &mdash; Waitlist &amp; Appointment Manager</p>
</body>
</html>
"
`;
